--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
-    "firebase": "^12.6.0",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
+    "react-toastify": "^10.0.5",
     "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
